--- a/Presentation/TaskManager.Web/TaskManager.Web.csproj
+++ b/Presentation/TaskManager.Web/TaskManager.Web.csproj
@@ -4,4 +4,13 @@
     <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="3.1.5" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\..\Domain\TaskManager\TaskManager.csproj" />
+    <ProjectReference Include="..\..\Infrastructure\Repository.TaskManager\Repository.TaskManager.csproj" />
+  </ItemGroup>
+
 </Project>
